--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
           go-version-file: go.mod
           cache: true
       - run: go mod download
-      - run: go test -v
+      - name: test
+        shell: 'script -q -e -c "bash {0}"'
+        run: |
+          go test -v
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
